adds main event loop text

--- a/main_event_loop.tex
+++ b/main_event_loop.tex
@@ -1,35 +1,34 @@
 %&latex
 \section{Main Event Loop}
 
-The main  event loop  in both \textsc{wmRS}  and \textsc{wmCPP}  comprises three
-core  stages. They  first  rely on  the underlying  windowing  system to  report
-certain \textit{events} they  are interested in. This is  done synchronously, as
-without any hardware interrupts or changes  to the environment, nothing is to be
-done.  That  is, both  window  managers  \textit{block}  until  a new  event  is
-received. The second  stage is the \textit{extraction}  and \textit{bundling} of
-useful information from underlying windowing system events into a structure that
-can be consumed by the various components of each window manager. The last stage
-is using  that windowing system  event information to perform  window management
-actions, \textit{delegating work} to different parts of the program.
+The main event loop  in both \wmrs and \wmcpp comprises  three core stages. They
+first rely on the underlying  windowing system to report certain \textit{events}
+they are  interested in.  This is  done synchronously,  as without  any hardware
+interrupts or changes to  the environment, nothing is to be  done. That is, both
+window managers \textit{block}  until a new event is received.  The second stage
+is  the \textit{extraction}  and  \textit{bundling} of  useful information  from
+underlying windowing system events into a  structure that can be consumed by the
+various  components  of each  window  manager.  The  last  stage is  using  that
+windowing  system  event  information  to  perform  window  management  actions,
+\textit{delegating work} to different parts of the program.
 
 \subsection{Windowing System Events}
 
-Both \textsc{wmRS} and \textsc{wmCPP} stipulate the existence of a \texttt{step}
-method  in  their \texttt{Connection}  interfaces.  This  method is  responsible
-for  converting  underlying windowing  system  information  into a  higher-level
-event,   as  can   be  gleaned   from  their   signatures:  \mintinline{rust}{fn
-step(&self) -> Option<Event>} (\textsc{wmRS}) and \mintinline{cpp}{Event step()}
-(\textsc{wmCPP}), where in both cases  \texttt{Event} is some internally defined
-structure of data.
+Both  \wmrs  and  \wmcpp  stipulate  the existence  of  a  \texttt{step}  method
+in  their  \texttt{Connection}  interfaces.   This  method  is  responsible  for
+converting underlying windowing system information into a higher-level event, as
+can  be  gleaned  from  their signatures:  \mintinline{rust}{fn  step(&self)  ->
+Option<Event>}  (\wmrs) and  \mintinline{cpp}{Event step()}  (\wmcpp), where  in
+both cases \texttt{Event} is some internally defined structure of data.
 
 \subsection{Internal Events}
 
 % https://doc.rust-lang.org/book/ch06-00-enums.html
 
-To structure event  data, \textsc{wmRS} uses Rust  \textit{enumerations}. A Rust
+To  structure  event  data,  \wmrs   uses  Rust  \textit{enumerations}.  A  Rust
 \mintinline{rust}{enum}  allows for  the  definition of  a  type by  enumerating
-its  variants,  and, aside  from  encoding  \textit{meaning},  is also  able  to
-encapsulate  \textit{data}\cite{therustbook}. A  small  part of  \textsc{wmRS}'s
+its  variants,  and,   aside  from  encoding  \textit{meaning},   is  also  able
+to  encapsulate   \textit{data}\cite{therustbook}.  A  small  part   of  \wmrs's
 \mintinline{rust}{Event} \mintinline{rust}{enum} looks as follows.
 
 \begin{rustblock}
@@ -59,16 +58,16 @@ type if the amount of variants permits it\cite{therustreference}.\\
 
 % https://en.cppreference.com/w/cpp/utility/variant
 
-A  similar  construct  in   \cpp  is  not  \textit{its}  \mintinline{cpp}{enum},
-but   rather   \mintinline{cpp}{std::variant},   a  class   template   available
-since  \texttt{C++17}  that  represents  a  type-safe  union\cite{cppstd}.  Just
-as  with   Rust's  \mintinline{rust}{enum},  and  similar   to  regular  unions,
-the  object   representation  of   the  concrete   alternative  held   inside  a
-\mintinline{cpp}{std::variant}  instance  is   allocated  entirely  within  that
-instance's object representation\cite{cppstd}. That  is, the alternative may not
-allocate any additional dynamic memory\cite{cppstd}. As a result, as with Rust's
-\mintinline{rust}{enum}, the  size of a  \mintinline{cpp}{std::variant} instance
-is  dependent on  its  largest  alternative\cite{cppstd}. \textsc{wmCPP}  partly
+A  similar construct  in  \cpp is  not  \textit{its} \mintinline{cpp}{enum}  (or
+\mintinline{cpp}{enum  class}),  but  rather  \mintinline{cpp}{std::variant},  a
+class template available since \texttt{C++17} that represents a type-safe tagged
+union\cite{cppstd}. Just as with  Rust's \mintinline{rust}{enum}, and similar to
+regular  unions, the  object  representation of  the  concrete alternative  held
+inside a  \mintinline{cpp}{std::variant} instance  is allocated  entirely within
+that instance's object representation\cite{cppstd}. That is, the alternative may
+not allocate  any additional dynamic  memory\cite{cppstd}. As a result,  as with
+Rust's  \mintinline{rust}{enum}, the  size  of a  \mintinline{cpp}{std::variant}
+instance  is dependent  on its  largest alternative\cite{cppstd}.  \wmcpp partly
 represents its \mintinline{cpp}{Event} type as follows.
 
 \begin{cppblock}
@@ -87,7 +86,7 @@ represents its \mintinline{cpp}{Event} type as follows.
 Here,   each   concrete   alternative   is   a   \cpp   \mintinline{cpp}{struct}
 containing   information    about   the    specific   event   that    is   being
 represented  (e.g.  \mintinline{cpp}{typedef  struct  Mouse}  \mintinline{cpp}{{
-MouseEvent  event;  }   Mouse;  }).  This  is  similar   to  what  \textsc{wmRS}
+MouseEvent   event;   }   Mouse;   }).   This   is   similar   to   what   \wmrs
 does   with    its   Rust    \mintinline{rust}{enum}s,   only    more   verbose,
 non-inlined  (as  \mintinline{cpp}{std::variant}   cannot  deal  with  anonymous
 \mintinline{cpp}{struct}s,  since  \cpp does  not  have  pattern matching),  and
@@ -95,12 +94,12 @@ therefore less structured and more tedious to work with.\\
 
 % https://en.cppreference.com/w/cpp/utility/variant/monostate
 
-An astute  reader may  have noticed that  the \texttt{Connection}  interfaces of
-\textsc{wmRS}  and  \textsc{wmCPP} do  not  exactly  match. In  particular,  the
-\texttt{step}  function's signatures  seem to  communicate different  things. In
-\textsc{wmRS},  that  function  \textit{optionally}  yields  an  \texttt{Event},
-wheres  in  \textsc{wmCPP},  it  simply  returns  an  \texttt{Event}.  In  \cpp,
-when  using  a  \mintinline{cpp}{std::variant},   it  is  encouraged  to  encode
+An  astute  reader may  have  noticed  that the  \texttt{Connection}  interfaces
+of   \wmrs   and   \wmcpp   do   not   exactly   match.   In   particular,   the
+\texttt{step}  function's  signatures  seem  to  communicate  different  things.
+In   \wmrs,  that   function  \textit{optionally}   yields  an   \texttt{Event},
+wheres  in  \wmcpp,   it  simply  returns  an  \texttt{Event}.   In  \cpp,  when
+using   a   \mintinline{cpp}{std::variant},   it   is   encouraged   to   encode
 an   empty   alternative  using   \mintinline{cpp}{std::monostate}\cite{cppstd}.
 The   same    behavior   \textit{could}    instead   have   been    encoded   as
 \mintinline{cpp}{std::option<Event>}, where in this  case, the first alternative
@@ -111,13 +110,13 @@ next section.
 \subsection{Event Dispatch}
 
 Once an  event has been  generated at the windowing  system and filtered  into a
-structure that is to  be consumed by the window manager,  work must be delegated
-to various handlers  that deal with specific types of  events. An \texttt{Event}
-consequently encodes not  only the \textit{information} used  by these handlers,
-but  also  which handler  is  responsible  for  that event.  \textsc{wmRS}  uses
+structure  that  is  to  be  consumed  by  the  window  manager,  work  must  be
+delegated  to various  handlers  that deal  with specific  types  of events.  An
+\texttt{Event} consequently  encodes not  only the \textit{information}  used by
+these handlers, but also which handler is responsible for that event. \wmrs uses
 Rust's principle pattern matching construct, \mintinline{rust}{match}, for event
-dispatch. \textsc{wmRS}'s main event loop,  defined within a method belonging to
-its \texttt{Model} structure, partly looks as follows.
+dispatch. \wmrs's  main event  loop, defined  within a  method belonging  to its
+\texttt{Model} structure, partly looks as follows.
 
 \begin{rustblock}
   while self.running {
@@ -144,18 +143,18 @@ its \texttt{Model} structure, partly looks as follows.
 \end{rustblock}
 
 The  \texttt{step} method  returns an  \mintinline{rust}{Option<Event>}, so  the
-first thing to do is to check  whether a valid \texttt{Event} was retrieved from
-the  windowing system  connection (i.e.,  whether the  event that  was generated
-is  one  the  window  manager is  interested  in).  Rust's  \mintinline{rust}{if
-let}  construct  is  syntactic  sugar  for a  match  statement  that  runs  code
-when  the   value  matches   one  specific  pattern,   and  ignores   all  other
-values\cite{therustbook}. Converting  the above \mintinline{rust}{if let}  to an
-equivalent \mintinline{rust}{match} results in the following.
+first thing to do is check whether a valid \texttt{Event} was retrieved from the
+windowing system connection  (i.e., whether the event that was  generated is one
+the window manager is interested in). Rust's \mintinline{rust}{if let} construct
+is syntactic sugar for  a match statement that runs code  when the value matches
+one specific pattern, and ignores all other values\cite{therustbook}. Converting
+the above  \mintinline{rust}{if let}  to an  equivalent \mintinline{rust}{match}
+results in the following.
 
 \begin{rustblock}
   match self.conn.step() {
     Some(event) => { /*...*/ },
-    _ => (), // anything else => do nothing
+    _ => (),
   }
 \end{rustblock}
 
@@ -173,4 +172,72 @@ Additionally  matching on  this \texttt{event},  all \textit{variants}  that can
 possibly  exist for  its type  are enumerated,  binding identifiers  to each  of
 the  fields in  the struct-like  variants  defined in  the \texttt{Event}  enum,
 which are  then passed  on to  handler methods  within the  \texttt{Model} (e.g.
-\mintinline{rust}{fn handle_focus_request(window: Window)}).
+\mintinline{rust}{fn handle_focus_request(window: Window)}).\\
+
+% https://news.ycombinator.com/item?id=15249994
+% https://bitbashing.io/std-visit.html
+% https://pabloariasal.github.io/2018/06/26/std-variant/
+
+\cpp  does   not  consist   of  a  similar   pattern  matching   construct.  Its
+\mintinline{cpp}{switch}   statement  merely   allows   an   identifier  to   be
+tested   for  \textit{equality}   against  a   list  of   values.  Specifically,
+that  means  that   \mintinline{cpp}{std::variant}  alternatives  cannot  simply
+be  \mintinline{cpp}{switch}ed  on.  Instead,  the  \mintinline{cpp}{std::visit}
+companion  function   exists  to   allow  for   the  \textit{visiting}\cite{go4}
+of   a   \mintinline{cpp}{std::variant}   instance   based   on   its   possible
+alternatives\cite{cppstd}.    It   takes    the   \mintinline{cpp}{std::variant}
+instance  to  visit,  along  with  a  \textit{visitor}  object  that  implements
+\textit{function-call  operator} overloads  for each  of the  alternative types.
+An  example visitor  for  the \texttt{Event}  variant,  defined within  \wmcpp's
+\texttt{Model} class, partly looks as follows.
+
+\begin{cppblock}
+  // ...
+  class Model;
+  class Model final
+  {
+  public:
+    // ...
+  private:
+    // ...
+    struct EventVisitor {
+      EventVisitor(Model& model): model(model) {}
+
+      void operator()(std::monostate) {}
+      void operator()(Mouse event) {
+        model.handle_mouse(event);
+      }
+      void operator()(Key event) {
+        model.handle_key(event);
+      }
+      void operator()(MapRequest event) {
+        model.handle_map_request(event);
+      }
+      void operator()(FocusRequest event) {
+        model.handle_focus_request(event);
+      }
+      void operator()(CloseRequest event) {
+        model.handle_close_request(event);
+      }
+      void operator()(ScreenChange event) {
+        model.handle_screen_change(event);
+      }
+      // ...
+    private:
+      Model& model;
+    } event_visitor = EventVisitor(*this);
+    // ...
+  };
+\end{cppblock}
+
+Within the same class, a method  exists that contains \mbox{\wmcpp}'s main event
+loop, which roughly does the following.
+
+\begin{cppblock}
+  while (running)
+    std::visit(event_visitor, conn.step());
+\end{cppblock}
+
+Here, we rely on the visitor to deduce  the type of the event retrieved from the
+underlying connection's  \mintinline{cpp}{step} method,  delegating work  to the
+relevant handlers within \wmcpp's model.
