--- a/seminar.bib
+++ b/seminar.bib
@@ -1,78 +1,96 @@
 @misc{ pragmatics,
-	author =       {Robert D. Cameron},
-	title =        "{Four Concepts in Programming Language Description: Syntax, Semantics, Pragmatics and Metalanguage}",
-	date =         {January 7},
-	year =         "2002  (accessed May 5, 2021)",
-	url =          "https://www2.cs.sfu.ca/~cameron/Teaching/383/syn-sem-prag-meta.html"
+  author =       {Robert D. Cameron},
+  title =        "{Four Concepts in Programming Language Description: Syntax, Semantics, Pragmatics and Metalanguage}",
+  date =         {January 7},
+  year =         "2002  (accessed May 5, 2021)",
+  url =          "https://www2.cs.sfu.ca/~cameron/Teaching/383/syn-sem-prag-meta.html"
 }
 
 @misc { rustblogtraits,
-	author =       {Aaron Turon},
-	title =        "{Abstraction without overhead: traits in Rust}",
-	date =         {May 11},
-	year =         "2015  (accessed May 5, 2021)",
-	url =          "https://blog.rust-lang.org/2015/05/11/traits.html"
+  author =       {Aaron Turon},
+  title =        "{Abstraction without overhead: traits in Rust}",
+  date =         {May 11},
+  year =         "2015  (accessed May 5, 2021)",
+  url =          "https://blog.rust-lang.org/2015/05/11/traits.html"
 }
 
 @inproceedings{ cppstd,
-	author =       {ISO/IEC},
-	title =        "{ISO International Standard ISO/IEC 14882:2020(E) – Programming Language C\texttt{++}}",
-	year =         {2020},
-	organization = {International Organization for Standardization (ISO)},
-	address =      {Geneva, Switzerland},
-	url =          "https://isocpp.org/std/the-standard"
+  author =       {ISO/IEC},
+  title =        "{ISO International Standard ISO/IEC 14882:2020(E) – Programming Language C\texttt{++}}",
+  year =         {2020},
+  organization = {International Organization for Standardization (ISO)},
+  address =      {Geneva, Switzerland},
+  url =          "https://isocpp.org/std/the-standard"
 }
 
 @misc{ thecargobook,
-	author =       {The Cargo Developers},
-	title =        "{The Cargo Book}",
-	year =         "2021  (accessed May 5, 2021)",
-	url =          "https://doc.rust-lang.org/cargo/"
+  author =       {The Cargo Developers},
+  title =        "{The Cargo Book}",
+  year =         "2021  (accessed May 5, 2021)",
+  url =          "https://doc.rust-lang.org/cargo/"
 }
 
 @misc{ rustbyexample,
-	author =       {The Rust Developers},
-	title =        "{Rust by Example}",
-	year =         "2021  (accessed May 5, 2021)",
-	url =          "https://doc.rust-lang.org/rust-by-example/"
+  author =       {The Rust Developers},
+  title =        "{Rust by Example}",
+  year =         "2021  (accessed May 5, 2021)",
+  url =          "https://doc.rust-lang.org/rust-by-example/"
 }
 
 @misc{ therustreference,
-	author =       {The Rust Developers},
-	title =        "{The Rust Reference}",
-	year =         "2021  (accessed May 6, 2021)",
-	url =          "https://doc.rust-lang.org/reference/"
+  author =       {The Rust Developers},
+  title =        "{The Rust Reference}",
+  year =         "2021  (accessed May 6, 2021)",
+  url =          "https://doc.rust-lang.org/reference/"
 }
 
 @misc{ rusttraitsdeepdive,
-	author =       {Thomas Heartman},
-	title =        "{Rust traits: A deep dive}",
-	year =         "2021  (accessed May 6, 2021)",
-	url =          "https://blog.logrocket.com/rust-traits-a-deep-dive/"
+  author =       {Thomas Heartman},
+  title =        "{Rust traits: A deep dive}",
+  year =         "2021  (accessed May 6, 2021)",
+  url =          "https://blog.logrocket.com/rust-traits-a-deep-dive/"
 }
 
 @misc { rustdynamicdispatch,
-	author =       {Adam Schwalm},
-	title =        "{Exploring Dynamic Dispatch in Rust}",
-	date =         {7 March},
-	year =         "2017  (accessed May 6, 2021)",
-	url =          "https://alschwalm.com/blog/static/2017/03/07/exploring-dynamic-dispatch-in-rust/"
+  author =       {Adam Schwalm},
+  title =        "{Exploring Dynamic Dispatch in Rust}",
+  date =         {7 March},
+  year =         "2017  (accessed May 6, 2021)",
+  url =          "https://alschwalm.com/blog/static/2017/03/07/exploring-dynamic-dispatch-in-rust/"
 }
 
 @Book{ therustbook,
-  author =          "Steve Klabnik and Carol Nichols",
-  title =           "The {Rust} Programming Language",
-  publisher =       "No Starch Press",
-  address =         "San Francisco, CA, USA",
-  pages =           "xxvii + 519",
-  year =            "2017",
-  ISBN =            "1-59327-828-4 (paperback), 1-59327-851-9 (e-pub)",
-  ISBN-13 =         "978-1-59327-828-1 (paperback), 978-1-59327-851-9
-                 (e-pub)",
-  LCCN =            "QA76.73.R87 K53 2018",
-  bibdate =         "Thu Oct 31 18:42:15 MDT 2019",
-  bibsource =       "fsz3950.oclc.org:210/WorldCat;
+  author =       "Steve Klabnik and Carol Nichols",
+  title =        "The {Rust} Programming Language",
+  publisher =    "No Starch Press",
+  address =      "San Francisco, CA, USA",
+  pages =        "xxvii + 519",
+  year =         "2017",
+  ISBN =         "1-59327-828-4 (paperback), 1-59327-851-9 (e-pub)",
+  ISBN-13 =      "978-1-59327-828-1 (paperback), 978-1-59327-851-9 (e-pub)",
+  LCCN =         "QA76.73.R87 K53 2018",
+  bibdate =      "Thu Oct 31 18:42:15 MDT 2019",
+  bibsource =    "fsz3950.oclc.org:210/WorldCat;
                  http://www.math.utah.edu/pub/tex/bib/master.bib;
                  http://www.math.utah.edu/pub/tex/bib/multithreading.bib;
                  http://www.math.utah.edu/pub/tex/bib/rust.bib",
+}
+
+@book{go4,
+  added-at =    {2010-06-05T16:40:25.000+0200},
+  asin =        {0201633612},
+  author =      {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John M.},
+  biburl =      {https://www.bibsonomy.org/bibtex/27e3f1154ab1fbce54752a46dba7f2217/pnk},
+  description = {Amazon.com: Design Patterns: Elements of Reusable Object-Oriented Software (9780201633610): Erich Gamma, Richard Helm, Ralph Johnson, John M. Vlissides: Books},
+  dewey =       {005.12},
+  ean =         {9780201633610},
+  edition =     1,
+  interhash =   {7fe32957be97afaf4ecb38b5490d23b4},
+  intrahash =   {7e3f1154ab1fbce54752a46dba7f2217},
+  isbn =        {0201633612},
+  keywords =    {DBIS Design Object-Oriented Patterns SS2010 Seminar Software},
+  publisher =   {Addison-Wesley Professional},
+  timestamp =   {2010-06-05T16:40:25.000+0200},
+  title =       {Design Patterns: Elements of Reusable Object-Oriented Software},
+  year =        1994
 }
