--- a/seminar.tex
+++ b/seminar.tex
@@ -28,6 +28,9 @@
 
 \newcommand{\cpp}{C\texttt{++}\xspace}
 
+\newcommand{\wmcpp}{\mbox{\textsc{wmCPP}}}
+\newcommand{\wmrs}{\mbox{\textsc{wmRS}}}
+
 \newenvironment{mintedblock}[1]%[3]%
 {\VerbatimEnvironment
   % \begin{listing}[ht]
